# analyzere-python

./: .gitignore  .travis.yml  AUTHORS  BUILDING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.base  Jenkinsfile  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox-jenkins.ini  tox.ini
analyzere/: __init__.py  base_resources.py  errors.py  requestor.py  resources.py  utils.py
requirements/: install.txt  reqs.txt  test.txt
tests/: conftest.py  test_base_resources.py  test_code_style.py  test_requestor.py  test_resources.py  test_utils.py
